k8s/base/infra/observability/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: "shopbuddy.com"
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana
                port:
                  number: 3000
